--- a/serverless.yml
+++ b/serverless.yml
@@ -1,75 +1,67 @@
-service: cloud-responder # NOTE: update this with your service name
-
-# You can pin your service to only deploy with a specific Serverless version
-# Check out our docs for more details
-# frameworkVersion: "=X.X.X"
+service: cloud-responder
+configValidationMode: error
+custom:
+  defaultRegion: us-east-1
 
 provider:
   name: aws
-  runtime: nodejs12.x
+  stage: dev
+  runtime: nodejs14.x
+  memorySize: 128
+  versionFunctions: false
+  lambdaHashingVersion: 20201221
+  region: ${opt:region, self:custom.defaultRegion}
   environment:
-    SLACK_WEBHOOK_URL: https://hooks.slack.com/services/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
+    SLACK_WEBHOOK_URL: https://hooks.slack.com/services/XXXXXXXX/B01H47M6W1E/ofbkuZIVooitaSnZmSmWMcwn
 
-# you can overwrite defaults here
-#  stage: dev
-#  region: us-east-1
-
-  iamRoleStatements:
-    - Effect: Allow
-      Action:
-        - iam:DeleteUser
-        - iam:ListAccessKeys
-        - iam:DeleteAccessKey
-        - iam:GetLoginProfile
-        - iam:GetUser
-        - iam:DeleteLoginProfile
-      Resource: "*"
-    - Effect: Allow
-      Action:
-        - ec2:DescribeInstanceStatus
-        - ec2:DescribeInstances
-        - ec2:TerminateInstances
-      Resource: "*"
-
-# you can define service wide environment variables here
-#  environment:
-#    variable1: value1
-
-# you can add packaging information here
-#package:
-#  include:
-#    - include-me.js
-#    - include-me-dir/**
-#  exclude:
-#    - exclude-me.js
-#    - exclude-me-dir/**
+  iam:
+   role:
+    statements:
+      - Effect: Allow
+        Action:
+          - secretsmanager:GetSecretValue
+        # Resource: !Sub 'arn:aws:sns:${AWS::Region}:${AWS::AccountId}:dispatch'
+        Resource: !Sub 'arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:CloudResponderSecret*'
+      - Effect: Allow
+        Action:
+          - sns:Publish
+        # Resource: arn:aws:sns:${self:provider.region}:*:dispatch
+        Resource: !Sub 'arn:aws:sns:${AWS::Region}:${AWS::AccountId}:dispatch'
+      - Effect: Allow
+        Action:
+          - iam:DeleteUser
+          - iam:ListAccessKeys
+          - iam:DeleteAccessKey
+          - iam:GetLoginProfile
+          - iam:GetUser
+          - iam:DeleteLoginProfile
+        Resource: "*"
+      - Effect: Allow
+        Action:
+          - ec2:DescribeInstanceStatus
+          - ec2:DescribeInstances
+          - ec2:TerminateInstances
+        Resource: "*"
 
 functions:
-  eventHandler:
-    handler: serverless.handler
+  authorizer:
+    handler: serverless.authorizer
+    timeout: 30
+  capture:
+    handler: serverless.capture
+    timeout: 30
+    events:
+      - http:
+          path: capture
+          method: post
+          authorizer:
+            name: authorizer
+            resultTtlInSeconds: 0
+            identitySource: method.request.header.APIKey
+
+  process:
+    handler: serverless.process
     timeout: 900
     events:
-      - eventBridge:
-          pattern:
-            source:
-              - "anything-but": "aws.kms"
-              # - aws.iam
-            account:
-              - !Ref AWS::AccountId
-              # - !Ref ${AWS::AccountId}
+      - sns: dispatch
 
-
-#    environment:
-#      variable2: value2
-
-# you can add CloudFormation resource templates here
-#resources:
-#  Resources:
-#    NewResource:
-#      Type: AWS::S3::Bucket
-#      Properties:
-#        BucketName: my-new-bucket
-#  Outputs:
-#     NewOutput:
-#       Description: "Description for the output"
-#       Value: "Some output value"
