--- a/serverless.yml
+++ b/serverless.yml
@@ -12,7 +12,7 @@
 ***REMOVED***
 ***REMOVED***
   environment:
-    SLACK_WEBHOOK_URL: https://hooks.slack.com/services/***REMOVED***
+    EMAIL_TOPIC_ARN: !Ref "EmailTopic"
 
   iam:
    role:
@@ -20,11 +20,13 @@
       - Effect: Allow
         Action:
           - secretsmanager:GetSecretValue
-        Resource: !Sub 'arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:CloudResponderSecret*'
+        Resource: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:CloudResponderSecret*"
       - Effect: Allow
         Action:
           - sns:Publish
-        Resource: !Sub 'arn:aws:sns:${AWS::Region}:${AWS::AccountId}:dispatch'
+        Resource:
+          - !Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:dispatch"
+          - !Ref "EmailTopic"
       - Effect: Allow
         Action:
           - iam:DeleteUser
@@ -63,3 +65,18 @@
 ***REMOVED***
 ***REMOVED***
 
+***REMOVED***
+  Resources:
+    EmailTopic:
+      Type: AWS::SNS::Topic
+      Properties:
+        Subscription:
+          - Endpoint: "***REMOVED***"
+            Protocol: "email"
+        TopicName: "EmailTopic"
+      # EmailSubscription:
+      #   Type: AWS::SNS::Subscription
+      #   Properties:
+      #     Endpoint: ***REMOVED***
+      #     Protocol: email
+      #     TopicArn: !Ref 'EmailTopic'
