--- a/rules/NonCompliantUserCreated/config-default.yml
+++ b/rules/NonCompliantUserCreated/config-default.yml
@@ -5,5 +5,6 @@ trigger:
     value: aws.iam
   - path: $.detail.eventName
     value: CreateUser
+  - path: $.detail.errorCode
 userNamePattern: "[a-z]+_[a-z]+"
 severity: HIGH
