--- a/actions/SendSlack/config-default.yml
+++ b/actions/SendSlack/config-default.yml
@@ -1,5 +1,5 @@
-## Random channel
-webhookURL: "https://hooks.slack.com/services/T8ETS7H2N/B01T2S2039Q/123412341234"
+## Slach channel webhook
+webhookURL: "https://hooks.slack.com/services/ABCD/1234"
 icons:
   EXTREME: ":bomb:"
   HIGH: ":warning:"
