--- a/package.json
+++ b/package.json
@@ -21,18 +21,19 @@
   "dependencies": {
     "@slack/webhook": "^5.0.3",
     "bluebird": "^3.7.2",
+    "handlebars": "^4.7.7",
     "ip-range-check": "^0.2.0",
     "js-yaml": "^4.0.0",
     "jsonpath-plus": "^5.0.4",
     "moment-timezone": "^0.5.33"
   },
   "devDependencies": {
-    "slack": "^11.0.2",
-    "serverless": "^2.31.0",
-    "aws-sdk": "^2.805.0",
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
     "@babel/plugin-transform-modules-commonjs": "^7.12.1",
-    "babel-cli": "^6.26.0"
+    "aws-sdk": "^2.805.0",
+    "babel-cli": "^6.26.0",
+    "serverless": "^2.31.0",
+    "slack": "^11.0.2"
   }
 }
