--- a/aws-eventbridge.yml
+++ b/aws-eventbridge.yml
@@ -57,8 +57,8 @@ Resources:
       Policies:
           - PolicyName: AllowAPIDestinationsInvoke
             PolicyDocument:
-  ***REMOVED***
-  ***REMOVED***
+              Version: '2012-10-17'
+              Statement:
                 - Sid: InvokeAPIDestination
                   Effect: Allow
                   Action:
