--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "ip-range-check": "^0.2.0",
     "js-yaml": "^4.0.0",
     "jsonpath-plus": "^5.0.4",
-    "moment-timezone": "^0.5.33"
+    "moment-timezone": "^0.5.33",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
@@ -38,7 +39,6 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "serverless": "^2.31.0",
     "slack": "^11.0.2"
   }
 }
