discord semi functional v 1.0

--- a/actions.yml
+++ b/actions.yml
@@ -3,14 +3,45 @@ flows:
     provider: AWS
     enabled: true
     sequential:
+      #trying to add discord here
+      # - command: SendDiscord
+      #   message:
+      #     header: "Non-compliant user created"
+      #     values:
+      #       - label: "Account"
+      #         value: "$.event.rawEvent.account"
+      #       - label: "From"
+      #         value: "$.event.rawEvent.detail.sourceIPAddress"
+              
+      # end of change...
+
+      # discord 1st message
+      - command: SendDiscord
+        template: aws-event
+              
+      # discord 1st message
+
       - command: SendSlack
         template: aws-event
       - command: SendEmail
       - command: SendSlack
-        message: I will wait 10 seconds and take action if none taken
+        message: I will wait 10 seconds and take action if none 
+     # discord 2nd message
+      - command: SendDiscord
+        message: I will wait 10 seconds and take action if none taken   
+     # discord 2nd message
+     
       - command: Wait
         duration: 10
       - rule: check
+      # discord 3rd message
+      - command: SendDiscord
+        message:
+          header: "Will remove non-compliant user"
+          values:
+            - label: "Removing user"
+              value: "$.event.rawEvent.detail.requestParameters.userName" 
+      # discord 3rd message    
       - command: SendSlack
         message:
           header: "Will remove non-compliant user"
@@ -18,6 +49,10 @@ flows:
             - label: "Removing user"
               value: "$.event.rawEvent.detail.requestParameters.userName"
       - rule: remediate
+      # discord 4rth message
+      - command: SendDiscord
+        message: "Non-compliant user removed"      
+      # discord 4rth message
       - command: SendSlack
         message: "Non-compliant user removed"
 
@@ -26,14 +61,26 @@ flows:
     sequential:
       - command: SendSlack
         template: aws-event
+        # adding discord
+      - command: SendDiscord
+        template: aws-event
+        # adding discord
       - command: SendEmail
       - command: SendSlack
         message: I will wait 2 minutes and take action if none taken
+        # adding discord
+      - command: SendDiscord
+        message: I will wait 2 minutes and take action if none taken
+        # adding discord 
       - command: Wait
         duration: 120
       - rule: check
       - command: SendSlack
         message: Will terminate instances
+        # adding discord
+      - command: SendDiscord
+        message: Will terminate instances
+        # adding discord
       - rule: remediate
 
   - rule: SuspiciousLoginHour
@@ -41,6 +88,11 @@ flows:
     parallel:
       - command: SendSlack
         template: aws-event
+        # adding discord
+      - command: SendDiscord
+        message: Log in at Suspicious Hour Detected
+        template: aws-event  
+        # adding discord
       - command: SendEmail
 
   - rule: SuspiciousLoginIP
@@ -49,6 +101,11 @@ flows:
     parallel:
       - command: SendSlack
         template: aws-event
+        # adding discord
+      - command: SendDiscord
+        message: Log in from Suspicious IP Detected
+        template: aws-event  
+        # adding discord
       - command: SendEmail
 
   - rule: RootLogin
@@ -63,6 +120,16 @@ flows:
               value: "$.event.rawEvent.account"
             - label: "From"
               value: "$.event.rawEvent.detail.sourceIPAddress"
+      # adding discord
+      - command: SendDiscord
+        message: 
+          header: "Root has logged in"
+          values:
+            - label: "Account"
+              value: "$.event.rawEvent.account"
+            - label: "From"
+              value: "$.event.rawEvent.detail.sourceIPAddress"
+      # adding discord
       - command: SendEmail
         subject: "Root has logged in!"
 
