--- a/actions/SendDiscord/templates/aws-event.yml
+++ b/actions/SendDiscord/templates/aws-event.yml
@@ -32,20 +32,26 @@
 
 
 username: Responder
-avatar_url: https://i.imgur.com/fKL31aD.jpg%22%7D%7D%5D%7D
-content: '**This will be the header.**'
+# avatar_url: https://i.imgur.com/fKL31aD.jpg%22%7D%7D%5D%7D
+content: '**"{{finding.ruleTitle}}"**'
 embeds:
-  - title: finding.message
+  - title: "{{finding.message}}"
     color: 15258703
     fields:
       - name: 'Details:'
-        value: |-
-          **Severity**: High
-           **Account**: 961944027523
-           **Region**: us-east-1
-           **IP address**: 65.48.184.71
-           **Initiating user**: xabi
-           **Resources**: noncompliantuser2
+        value: "
+        *Severity*: {{finding.prettySeverity}}\n
+        *Account*: {{flow.event.account}}\n
+        *Region*: {{flow.event.region}}\n
+        *IP address*: {{flow.event.initiatingIP}}\n
+        *Initiating user*: {{flow.event.initiator}}\n
+        {{#if finding.resources}}
+          *Resources*:
+          {{#each finding.resources}}
+            {{this}}
+          {{/each}}
+        {{/if}}
+      "
         inline: true
     thumbnail:
       url: >-
