--- a/actions/SendDiscord/templates/aws-event.yml
+++ b/actions/SendDiscord/templates/aws-event.yml
@@ -1,36 +1,3 @@
-# blocks:
-#   - type: header
-#     text:
-#       type: plain_text
-#       text: "{{finding.ruleTitle}}"
-#   - type: divider
-#   - type: section
-#     text:
-#       type: mrkdwn
-#       text: "{{finding.message}}"
-#   - type: section
-#     text:
-#       type: mrkdwn
-#       text: "
-#         *Severity*: {{finding.prettySeverity}}\n
-#         *Account*: {{flow.event.account}}\n
-#         *Region*: {{flow.event.region}}\n
-#         *IP address*: {{flow.event.initiatingIP}}\n
-#         *Initiating user*: {{flow.event.initiator}}\n
-#         {{#if finding.resources}}
-#           *Resources*:
-#           {{#each finding.resources}}
-#             {{this}}
-#           {{/each}}
-#         {{/if}}
-#       "
-#     accessory:
-#       type: image
-#       image_url: https://previews.123rf.com/images/chekman/chekman1710/chekman171000063/87685776-warning-danger-sign-vector-illustration-warning-square-sign-with-exclamation-mark-.jpg
-#       alt_text: "Severity: {{finding.prettySeverity}}"
-
-
-
 username: Responder
 # avatar_url: https://i.imgur.com/fKL31aD.jpg%22%7D%7D%5D%7D
 content: '**"{{finding.ruleTitle}}"**'
@@ -44,6 +11,7 @@ embeds:
         *Account*: {{flow.event.account}}\n
         *Region*: {{flow.event.region}}\n
         *IP address*: {{flow.event.initiatingIP}}\n
+        *Triggered*: {{finding.delay}} seconds ago\n
         *Initiating user*: {{flow.event.initiator}}\n
         {{#if finding.resources}}
           *Resources*:
@@ -51,7 +19,7 @@ embeds:
             {{this}}
           {{/each}}
         {{/if}}
-      "
+        "
         inline: true
     thumbnail:
       url: >-
